--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,50 +1,52 @@
-# https://docs.github.com/en/actions/publishing-packages/publishing-docker-images#publishing-images-to-github-packages 
+name: Sync Cura Definitions
 
-#
-name: Create and publish a Docker image
-
-# Configures this workflow to run every time a change is pushed to the branch called `release`.
 on:
   push:
-    branches: ["release"]
+    tags:
+      - "run-action-*"
+  release:
+    types:
+      - published
 
-# Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
-# There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
-  build-and-push-image:
+  syncDefinitions:
     runs-on: ubuntu-latest
-    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
-    permissions:
-      contents: read
-      packages: write
-      #
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+      # Step 1: Checkout your repository
+      - name: Checkout your repository
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Python (if needed)
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      # This step uses [docker/metadata-action](https://github.com/docker/metadata-action#about) to extract tags and labels that will be applied to the specified image. The `id` "meta" allows the output of this step to be referenced in a subsequent step. The `images` value provides the base name for the tags and labels.
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
-      # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
-      # It uses the `tags` and `labels` parameters to tag and label the image with the output from the "meta" step.
-      - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          python-version: 3.8
+
+      # Step 3: Clone Cura repository
+      - name: Clone Cura repository
+        run: git clone --depth=1 https://github.com/Ultimaker/Cura.git
+
+      # Step 4: Copy definitions folder from Cura to your repository
+      - name: Copy definitions folder
+        run: cp -r Cura/resources/definitions ./printerDefinitions
+
+      # Step 5: Commit and push changes back to your repository using a secret token
+      - name: Commit and push changes
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+
+          # Set up Git with the personal access token stored as a secret
+          git config credential.helper 'cache --timeout=3600'
+          git config --global credential.helper "store --file=.git/credentials"
+          echo "https://github.com/${{ secrets.YOUR_GITHUB_USERNAME }}:${{ secrets.YOUR_GITHUB_TOKEN }}" > .git/credentials
+
+          # Stage changes
+          git add .
+
+          # Commit changes
+          git commit -m "Sync Cura definitions"
+
+          # Push changes to the main branch using the secret token
+          git push origin main
