--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Commit changes
         run: |
           cd CuraEngine-Docker
-          git config --global user.email "
+          git config --global user.email "nikiphi01@gmail.com"
           git config --global user.name "GitHub Actions"
           git add .
           git commit -m "Sync definitions"
