--- a/server/package.json
+++ b/server/package.json
@@ -2,27 +2,36 @@
   "name": "cura-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aabhas-sao/cura-test.git"
+    "start": "node build/index.js",
+    "dev": "nodemon",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aabhas-sao/cura-test/issues"
-  },
-  "homepage": "https://github.com/aabhas-sao/cura-test#readme",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.0",
+    "@types/passport": "^1.0.16",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "multer": "^1.4.4"
-  }
+    "multer": "^1.4.4",
+    "passport": "^0.7.0",
+    "passport-headerapikey": "^1.2.2",
+    "stl": "^1.1.1",
+    "tslib": "^2.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "type-fest": "^3.9.0",
+    "typescript": "^5.3.3"
+  },
+  "types": "src/types/*.d.ts"
 }
