--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.0",
     "@types/passport": "^1.0.16",
+    "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
@@ -25,7 +26,8 @@
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "stl": "^1.1.1",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
